--- a/index.html
+++ b/index.html
@@ -1,290 +1,181 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vynix AI - Dashboard & Training</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/brain.js@2.0.0-beta.2/dist/brain-browser.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; background: #F7F7F8; margin: 0; }
-    .header { position: fixed; top: 0; left: 0; right: 0; padding: 1rem; display: flex; justify-content: center; align-items: center; background: white; border-bottom: 1px solid #e5e7eb; z-index: 10; }
-    .v-logo { width: 40px; height: 40px; background: #000; border-radius: 12px; display: flex; align-items: center; justify-content: center; }
-    .v-logo svg { width: 24px; height: 24px; fill: white; }
-    .content { margin-top: 6rem; padding: 2rem; max-width: 1000px; margin-left: auto; margin-right: auto; }
-    .card { background: white; border-radius: 1.5rem; padding: 2rem; box-shadow: 0 10px 25px rgba(0,0,0,0.1); margin-bottom: 2rem; }
-    .input-field { width: 100%; padding: 1rem 1.25rem; background: #f9fafb; border: 1px solid #e5e7eb; border-radius: 1rem; font-size: 1rem; }
-    .input-field:focus { outline: none; border-color: #000; }
-    .btn { padding: 1rem 2rem; border-radius: 9999px; font-weight: 600; cursor: pointer; transition: all 0.2s; }
-    .btn-primary { background: linear-gradient(135deg, #000, #333); color: white; }
-    .btn-primary:hover { transform: scale(1.05); }
-    .btn-train { background: linear-gradient(135deg, #7c3aed, #db2777); color: white; }
-    .pair-item { background: #f9fafb; border-radius: 1rem; padding: 1.25rem; margin-bottom: 1rem; display: flex; justify-content: space-between; align-items: center; }
-    .progress-bar { height: 12px; background: #e5e7eb; border-radius: 999px; overflow: hidden; margin: 1rem 0; }
-    .progress-fill { height: 100%; background: linear-gradient(90deg, #7c3aed, #db2777); width: 0%; transition: width 0.3s; }
-    .training-status { text-align: center; font-weight: 600; margin: 1rem 0; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Privacy Policy - Vynix Chat</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Rounded" rel="stylesheet">
+    <style>
+        :root {
+            --accent-purple: #d946ef;
+            --accent-green: #10b981;
+            --logo-gradient: linear-gradient(135deg, #000000 0%, var(--accent-purple) 50%, var(--accent-green) 100%);
+            --bg-color: #ffffff;
+            --text-color: #333333;
+            --text-light: #666666;
+        }
+        *, *::before, *::after {
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            background: var(--bg-color);
+            font-family: 'Poppins', sans-serif;
+            color: var(--text-color);
+            line-height: 1.6;
+            -webkit-user-select: text;
+            user-select: text;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        header {
+            padding: 20px;
+            text-align: center;
+            border-bottom: 1px solid #eee;
+        }
+        .logo-icon {
+            font-size: 48px;
+            background: var(--logo-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            font-variation-settings: 'FILL' 1, 'wght' 700;
+        }
+        h1 {
+            font-size: 28px;
+            font-weight: 700;
+            margin: 10px 0 0;
+        }
+        .back-btn {
+            position: absolute;
+            left: 20px;
+            top: 20px;
+            font-size: 32px;
+            color: var(--text-light);
+            cursor: pointer;
+            padding: 8px;
+            border-radius: 50%;
+            transition: background 0.2s;
+        }
+        .back-btn:hover {
+            background: #f0f0f0;
+        }
+        main {
+            flex: 1;
+            overflow-y: auto;
+            padding: 30px 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            width: 100%;
+        }
+        section {
+            margin-bottom: 40px;
+        }
+        h2 {
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 12px;
+            color: var(--accent-purple);
+        }
+        p, li {
+            font-size: 15px;
+            color: var(--text-light);
+            margin-bottom: 16px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 8px;
+        }
+        .last-updated {
+            font-size: 14px;
+            color: #999;
+            text-align: center;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-  <!-- Header with V logo -->
-  <div class="header">
-    <div class="v-logo">
-      <svg viewBox="0 0 24 24">
-        <path d="M19.75 2.25h3L12 21.75h-3L1.25 2.25h3l7.5 17.19z"/>
-      </svg>
-    </div>
-  </div>
+    <header>
+        <span class="material-symbols-rounded back-btn" onclick="window.history.back()">arrow_back</span>
+        <span class="material-symbols-rounded logo-icon">auto_awesome</span>
+        <h1>Vynix</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Privacy Policy</h2>
+            <p>Your privacy is important to us. This Privacy Policy explains how Vynix Chat ("we", "us", or "our") collects, uses, and protects your information when you use our service.</p>
+            <p class="last-updated">Last updated: December 29, 2025</p>
+        </section>
 
-  <div class="content">
-    <div class="card">
-      <h1 class="text-3xl font-bold text-center mb-8">Vynix AI Dashboard & Training</h1>
+        <section>
+            <h2>1. Information We Collect</h2>
+            <p>We collect the following information:</p>
+            <ul>
+                <li><strong>Account Information:</strong> When you sign in with Google, we receive your name, email address, and profile picture.</li>
+                <li><strong>Guest Access:</strong> If you continue as a guest, we create an anonymous account with no personal identifiers.</li>
+                <li><strong>Usage Data:</strong> We may collect anonymized data about how you interact with the app (e.g., features used) to improve the service.</li>
+                <li><strong>Messages:</strong> Your chat messages are stored securely and are only accessible to you and the recipients.</li>
+            </ul>
+        </section>
 
-      <!-- Add Response -->
-      <div class="mb-12">
-        <h2 class="text-2xl font-semibold mb-6">Add Response</h2>
-        <div class="grid md:grid-cols-2 gap-6 mb-6">
-          <input type="text" id="trigger" placeholder="Trigger phrase..." class="input-field">
-          <input type="text" id="reply" placeholder="Bot reply..." class="input-field">
-        </div>
-        <button id="add-single" class="btn btn-primary w-full">Add to Global Brain</button>
-      </div>
+        <section>
+            <h2>2. How We Use Your Information</h2>
+            <p>We use your information to:</p>
+            <ul>
+                <li>Provide and maintain the chat service</li>
+                <li>Authenticate your identity</li>
+                <li>Enable real-time messaging</li>
+                <li>Improve app performance and user experience</li>
+                <li>Respond to support requests</li>
+            </ul>
+        </section>
 
-      <!-- Bulk Import -->
-      <div class="mb-12">
-        <h2 class="text-2xl font-semibold mb-6">Bulk Import (JSON)</h2>
-        <textarea id="bulk-json" class="input-field h-48 font-mono text-sm" placeholder='[{"trigger":"hi","reply":"Hello!"}, ...]'></textarea>
-        <button id="bulk-import" class="btn btn-primary w-full mt-4">Import All</button>
-        <div id="bulk-status" class="mt-4 text-center font-medium"></div>
-      </div>
+        <section>
+            <h2>3. Data Storage and Security</h2>
+            <p>All data is stored using secure Firebase services provided by Google. We implement industry-standard security measures to protect your information from unauthorized access.</p>
+            <p>Messages are end-to-end accessible only by participants. We do not read or scan your private conversations.</p>
+        </section>
 
-      <!-- Training Section -->
-      <div class="mb-12">
-        <h2 class="text-2xl font-semibold mb-6">Train Neural Model (Optional Fallback)</h2>
-        <div class="grid md:grid-cols-2 gap-6 mb-6">
-          <button id="train-lstm" class="btn btn-train p-8 text-left">
-            <div class="text-xl font-bold">Standard LSTM</div>
-            <div class="text-sm opacity-80 mt-2">Best quality • Slower training</div>
-            <div class="text-3xl font-bold mt-4" id="lstm-count">(0 pairs)</div>
-          </button>
-          <button id="train-turbo" class="btn btn-train p-8 text-left">
-            <div class="text-xl font-bold">⚡ Turbo Mode</div>
-            <div class="text-sm opacity-80 mt-2">10× faster • Still excellent</div>
-            <div class="text-3xl font-bold mt-4" id="turbo-count">(0 pairs)</div>
-          </button>
-        </div>
-        <div id="training-progress" class="hidden">
-          <div class="progress-bar"><div id="progress-fill" class="progress-fill"></div></div>
-          <div class="training-status" id="training-status">Preparing...</div>
-        </div>
-        <button id="save-model" class="btn btn-primary w-full mt-6" disabled>Save as New Global Brain</button>
-      </div>
+        <section>
+            <h2>4. Sharing Your Information</h2>
+            <p>We do not sell, trade, or share your personal information with third parties, except:</p>
+            <ul>
+                <li>With your explicit consent</li>
+                <li>To comply with legal requirements</li>
+                <li>With service providers (like Google Firebase) that help us operate the app under strict confidentiality</li>
+            </ul>
+        </section>
 
-      <!-- Your Contributions -->
-      <div>
-        <h2 class="text-2xl font-semibold mb-6">Your Contributions (<span id="my-count">0</span>)</h2>
-        <div id="my-pairs" class="space-y-4"></div>
-      </div>
-    </div>
-  </div>
+        <section>
+            <h2>5. Your Rights</h2>
+            <p>You have the right to:</p>
+            <ul>
+                <li>Access your personal data</li>
+                <li>Delete your account and associated data (contact support)</li>
+                <li>Opt out of non-essential data collection</li>
+            </ul>
+        </section>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signInAnonymously } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
-    import { getDatabase, ref, push, set, onValue, remove } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js";
+        <section>
+            <h2>6. Changes to This Policy</h2>
+            <p>We may update this Privacy Policy from time to time. We will notify you of any significant changes within the app.</p>
+        </section>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBOyZ3As4GTuNvjemvPF_SpsC6m6vqtNhc",
-      authDomain: "fire-b-a8878.firebaseapp.com",
-      databaseURL: "https://fire-b-a8878.firebaseio.com",
-      projectId: "fire-b-a8878",
-      storageBucket: "fire-b-a8878.firebasestorage.app",
-      messagingSenderId: "658673187627",
-      appId: "1:658673187627:web:6e4c29af661785f0afa36e"
-    };
+        <section>
+            <h2>7. Contact Us</h2>
+            <p>If you have any questions about this Privacy Policy, please contact us at: support@vynixchat.com</p>
+        </section>
 
-    initializeApp(firebaseConfig);
-    const auth = getAuth();
-    const db = getDatabase();
-
-    const el = {
-      trigger: document.getElementById('trigger'),
-      reply: document.getElementById('reply'),
-      addSingle: document.getElementById('add-single'),
-      bulkJson: document.getElementById('bulk-json'),
-      bulkImport: document.getElementById('bulk-import'),
-      bulkStatus: document.getElementById('bulk-status'),
-      myPairs: document.getElementById('my-pairs'),
-      myCount: document.getElementById('my-count'),
-      trainLstm: document.getElementById('train-lstm'),
-      trainTurbo: document.getElementById('train-turbo'),
-      lstmCount: document.getElementById('lstm-count'),
-      turboCount: document.getElementById('turbo-count'),
-      trainingProgress: document.getElementById('training-progress'),
-      progressFill: document.getElementById('progress-fill'),
-      trainingStatus: document.getElementById('training-status'),
-      saveModel: document.getElementById('save-model')
-    };
-
-    let pairs = [];
-    let myUid = null;
-    let trainedNet = null;
-
-    // Load all pairs
-    onValue(ref(db, 'pairs'), snap => {
-      pairs = [];
-      const data = snap.val() || {};
-      Object.values(data).forEach(p => {
-        if (p.trigger && p.reply) pairs.push({ trigger: p.trigger.trim(), reply: p.reply.trim() });
-      });
-      el.lstmCount.textContent = el.turboCount.textContent = `(${pairs.length} pairs)`;
-      renderMyContributions();
-    });
-
-    function renderMyContributions() {
-      onValue(ref(db, 'pairs'), snap => {
-        const data = snap.val() || {};
-        const mine = Object.entries(data)
-          .filter(([id, p]) => p.uid === myUid)
-          .map(([id, p]) => ({id, ...p}));
-
-        el.myCount.textContent = mine.length;
-
-        el.myPairs.innerHTML = mine.map(p => `
-          <div class="pair-item">
-            <div>
-              <div class="font-mono text-sm opacity-70">"${p.trigger}"</div>
-              <div class="mt-1">${p.reply}</div>
-            </div>
-            <button class="bg-red-500 text-white w-10 h-10 rounded-full flex items-center justify-center" onclick="deletePair('${p.id}')">×</button>
-          </div>
-        `).join('') || '<p class="text-center text-gray-500 py-8">No contributions yet</p>';
-      }, { onlyOnce: true });
-    }
-
-    // Add single
-    el.addSingle.onclick = async () => {
-      const trigger = el.trigger.value.trim().toLowerCase();
-      const reply = el.reply.value.trim();
-      if (!trigger || !reply) return;
-
-      const newRef = push(ref(db, 'pairs'));
-      await set(newRef, {
-        trigger,
-        reply,
-        uid: auth.currentUser.uid,
-        addedAt: Date.now()
-      });
-
-      el.trigger.value = el.reply.value = '';
-    };
-
-    // Bulk import
-    el.bulkImport.onclick = async () => {
-      try {
-        const items = JSON.parse(el.bulkJson.value);
-        if (!Array.isArray(items)) throw "Invalid";
-
-        let added = 0;
-        for (const item of items) {
-          const trigger = String(item.trigger || "").trim().toLowerCase();
-          const reply = String(item.reply || "").trim();
-          if (trigger && reply) {
-            const newRef = push(ref(db, 'pairs'));
-            await set(newRef, {
-              trigger,
-              reply,
-              uid: auth.currentUser.uid,
-              addedAt: Date.now()
-            });
-            added++;
-          }
-        }
-
-        el.bulkJson.value = '';
-        el.bulkStatus.textContent = `Added ${added} responses!`;
-        el.bulkStatus.style.color = '#10b981';
-      } catch (e) {
-        el.bulkStatus.textContent = "Invalid JSON";
-        el.bulkStatus.style.color = '#ef4444';
-      }
-    };
-
-    // Training
-    let trainingWorker = null;
-
-    function startTraining(turbo = false) {
-      if (pairs.length === 0) return alert("No data to train on!");
-
-      el.trainingProgress.classList.remove('hidden');
-      el.progressFill.style.width = '0%';
-      el.trainingStatus.textContent = turbo ? "Training Turbo model..." : "Training Standard LSTM...";
-
-      const code = `
-        importScripts('https://cdn.jsdelivr.net/npm/brain.js@2.0.0-beta.2/dist/brain-browser.min.js');
-        const encode = s => s.padEnd(200,' ').slice(0,200).split('').map(c=>c.charCodeAt(0)/255);
-        const decode = a => a.map(n=>String.fromCharCode(Math.round(n*255))).join('').trim();
-        self.onmessage = e => {
-          const data = e.data.pairs;
-          const turbo = e.data.turbo;
-          const net = turbo ? new brain.NeuralNetwork({hiddenLayers: [512,512,512]}) : new brain.recurrent.LSTM();
-          const formatted = turbo ? data.map(p=>({input:encode(p.trigger), output:encode(p.reply)})) : data.map(p=>({input:p.trigger, output:p.reply}));
-          net.train(formatted, { 
-            iterations: turbo ? 60000 : Math.min(200, data.length * 2),
-            log: true, 
-            logPeriod: 1000,
-            callback: s => self.postMessage({progress: s.iterations / (turbo ? 60000 : Math.min(200, data.length * 2))})
-          });
-          self.postMessage({done: net.toJSON()});
-        };
-      `;
-
-      trainingWorker = new Worker(URL.createObjectURL(new Blob([code], {type: 'application/javascript'})));
-      trainingWorker.postMessage({pairs, turbo});
-
-      trainingWorker.onmessage = e => {
-        if (e.data.progress !== undefined) {
-          el.progressFill.style.width = (e.data.progress * 100) + '%';
-        }
-        if (e.data.done) {
-          trainedNet = e.data.done;
-          el.trainingStatus.textContent = "Training complete! Ready to save.";
-          el.saveModel.disabled = false;
-          trainingWorker.terminate();
-        }
-      };
-    }
-
-    el.trainLstm.onclick = () => startTraining(false);
-    el.trainTurbo.onclick = () => startTraining(true);
-
-    el.saveModel.onclick = async () => {
-      if (!trainedNet) return;
-      el.saveModel.disabled = true;
-      el.trainingStatus.textContent = "Saving global model...";
-
-      const newRef = push(ref(db, 'global-models'));
-      await set(newRef, {
-        model: trainedNet,
-        pairsUsed: pairs.length,
-        timestamp: Date.now(),
-        trainer: auth.currentUser.email || "Dashboard"
-      });
-
-      el.trainingStatus.textContent = "New global brain saved! Live worldwide.";
-      setTimeout(() => {
-        el.trainingProgress.classList.add('hidden');
-        el.saveModel.disabled = true;
-        trainedNet = null;
-      }, 3000);
-    };
-
-    window.deletePair = (id) => remove(ref(db, `pairs/${id}`));
-
-    onAuthStateChanged(auth, user => {
-      if (user) myUid = user.uid;
-      else signInAnonymously(auth);
-    });
-  </script>
+        <p class="last-updated">Thank you for trusting Vynix Chat.</p>
+    </main>
 </body>
 </html>
